Add model section

--- a/Paper/Course_work_Garmider.tex
+++ b/Paper/Course_work_Garmider.tex
@@ -242,20 +242,25 @@
 
 Неспецифичность апреля месяца для степени тяжести ДТП можно видеть на рис. 14. В отличии от рис. 13, апрель не выделяется из общего тренда дорожно-транспортных происшествий, и с поправкой на количество случаев повторяет общую динамику частоты инцидентов. Тепловая карта ДТП (рис. 12) помогает убедиться в плавности учащение случаев ДТП из месяца в месяц, а в остальном повторяет агрегированную ежемесячную динамику.
 
-На данный момент были выяснены основные сезонные и временные особенности дорожно-транспортных происшествий, а также эффект летальности данных показателей. 
+На данный момент были выяснены основные сезонные и временные особенности дорожно-транспортных происшествий, а также эффект летальности данных показателей.  
 
 \newpage
 \noindent Основные выводы:
 \begin{enumerate}
+	\item В подавляющем большинстве случаев в ДТП есть один раненный 
+	\item В подавляющем большинстве случаев в ДТП нет погибших
 	\item Количество ДТП почти никак не изменяется из года в год
-	\item Количество погибших в ДТП в расчете на одну аварию уменьшается
+	\item Количество погибших в ДТП в расчете на один инцидент уменьшалось с 2015 по 2019 год
+	\item Количество погибших в ДТП в расчете на один инцидент никак не изменилось в 2020 году по отношению к 2019 году
 	\item Среднее количество раненных в ДТП никак не зависит от временных и сезонных особенностей инцидента 
-	\item Количество случаев ДТП увеличивается к концу года и после резко падает в января
-	\item Температура воздуха слабо описывает тяжесть ДТП, как и общую динамику в контексте месяцев
-	\item Суббота и воскресенья являются самыми <<опасными>> днями, основываясь на среднем количестве погибших в ДТП в эти дни
+	\item Количество случаев ДТП увеличивается к концу года, после чего резко падает в январе
+	\item Температура воздуха слабо влияет на тяжесть ДТП, как и общую динамику в контексте месяцев
+	\item Суббота и воскресенье являются самыми <<опасными>> днями, основываясь на среднем количестве погибших в ДТП в эти дни
 	\item Большая часть ДТП происходит в рабочие часы с 8 утра до 10 вечера
 	\item Большинство летальных случаев ДТП выпадает на ночное время 
+	\item Режим самоизоляции уменьшил количество случаев ДТП, как минимум в апреле и мае месяцах (рис. 11)
 	\item Режим самоизоляции никак не сказался на количестве летальных случаев в ДТП (рис. 15)
+	\item Вопреки выдвинутой гипотезы об отсутствии связи летальности ДТП и уровня освещения дороги, связь была обнаружена (рис. 16)
 	
 \end{enumerate}
 
@@ -264,6 +269,63 @@
 	\caption{Количество погибших в ДТП 2020-й год (г. Москва)}
 \end{figure}
 
+
+\begin{figure}[h]
+	\center{\includegraphics[scale=0.45]{img/pog_ran_osv}}
+	\caption{Среднее количество погибших/раненных по типу освещения (г. Москва)}
+\end{figure}
+
+
+
+Упомянутая гипотеза об отсутствии влияния освещения на степень тяжести ДТП не подтвердилась. На рис. 16 видна явная связь этих показателей. Среднее количество погибших в ДТП гораздо ниже при наличии источников света. Видно, что в темное время суток при включенном освещении, среднее количество летальных случаев гораздо ниже ситуаций с отсутствием освещения и находится на уровне ДТП при естественных источниках света.
+
+\section{Модель}
+
+Для моделирования использовалась стандартная байесовская регрессия. Модель выглядит следующим образом:
+
+\[
+	dtpCount_i = \beta_0 + \beta_1 temp_i + \sum_{j=2016}^{2020} \beta_{j - 2014}[year = j]_i + \sum_{j = 2}^{12} \beta_{j + 5} [month = j]_i +
+\]
+\[
+	+ \sum_{j=1}^{6} \beta_{j + 17} * [weekday = j]_i
+\]
+
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{rlrrrrrrr}
+		\hline
+		Parameter & Median & CI & CI\_low & CI\_high & pd & Rhat & ESS \\ 
+		\hline
+		Intercept) & 26.93 & 0.95 & 25.58 & 28.22 & 1.00 & 1.00 & 1502.94 \\ 
+		temp & 0.26 & 0.95 & 0.21 & 0.32 & 1.00 & 1.00 & 1747.47 \\ 
+		factor(year)2016 & -3.56 & 0.95 & -4.44 & -2.60 & 1.00 & 1.00 & 2889.02 \\ 
+		factor(year)2017 & -3.85 & 0.95 & -4.79 & -2.95 & 1.00 & 1.00 & 2847.93 \\ 
+		factor(year)2018 & -3.23 & 0.95 & -4.14 & -2.25 & 1.00 & 1.00 & 3052.08 \\ 
+		factor(year)2019 & -3.17 & 0.95 & -4.08 & -2.25 & 1.00 & 1.00 & 2648.73 \\ 
+		factor(year)2020 & -6.99 & 0.95 & -7.90 & -6.06 & 1.00 & 1.00 & 2605.14 \\ 
+		factor(month)2 & 0.30 & 0.95 & -1.01 & 1.64 & 0.67 & 1.00 & 2015.02 \\ 
+		factor(month)3 & -1.11 & 0.95 & -2.49 & 0.20 & 0.95 & 1.00 & 1672.39 \\ 
+		factor(month)4 & -4.63 & 0.95 & -6.11 & -3.09 & 1.00 & 1.00 & 1471.72 \\ 
+		factor(month)5 & -3.62 & 0.95 & -5.34 & -1.93 & 1.00 & 1.00 & 1287.39 \\ 
+		factor(month)6 & -3.06 & 0.95 & -4.92 & -1.14 & 1.00 & 1.00 & 1315.87 \\ 
+		factor(month)7 & -4.91 & 0.95 & -6.85 & -3.04 & 1.00 & 1.00 & 1309.13 \\ 
+		factor(month)8 & -1.18 & 0.95 & -3.17 & 0.58 & 0.89 & 1.00 & 1272.19 \\ 
+		factor(month)9 & 2.82 & 0.95 & 1.03 & 4.42 & 1.00 & 1.00 & 1340.43 \\ 
+		factor(month)10 & 3.12 & 0.95 & 1.64 & 4.63 & 1.00 & 1.00 & 1466.13 \\ 
+		factor(month)11 & 4.44 & 0.95 & 3.10 & 5.74 & 1.00 & 1.00 & 1715.74 \\ 
+		factor(month)12 & 5.23 & 0.95 & 3.91 & 6.56 & 1.00 & 1.00 & 2015.89 \\ 
+		factor(weekday)1 & 0.54 & 0.95 & -0.45 & 1.58 & 0.86 & 1.00 & 2588.40 \\ 
+		factor(weekday)2 & 0.50 & 0.95 & -0.48 & 1.52 & 0.84 & 1.00 & 2580.39 \\ 
+		factor(weekday)3 & 0.91 & 0.95 & -0.17 & 1.85 & 0.96 & 1.00 & 2250.87 \\ 
+		factor(weekday)4 & 1.87 & 0.95 & 0.83 & 2.79 & 1.00 & 1.00 & 2258.78 \\ 
+		factor(weekday)5 & -1.09 & 0.95 & -2.14 & -0.08 & 0.98 & 1.00 & 2654.72 \\ 
+		factor(weekday)6 & -3.97 & 0.95 & -4.99 & -2.95 & 1.00 & 1.00 & 2437.26 \\ 
+		\hline
+	\end{tabular}
+	\caption{Результаты модели}
+\end{table}
+
+Базовым годом был взят 2015-й. Базовый месяц --- январь. Базовый день недели --- понедельник. Коэффициенты при соответствующих факторных переменных следует интерпретировать относительно указанных базовых категорий. 
 
  
 
