Add model section

--- a/Paper/Course_work_Garmider.tex
+++ b/Paper/Course_work_Garmider.tex
@@ -279,7 +279,7 @@
 
 Упомянутая гипотеза об отсутствии влияния освещения на степень тяжести ДТП не подтвердилась. На рис. 16 видна явная связь этих показателей. Среднее количество погибших в ДТП гораздо ниже при наличии источников света. Видно, что в темное время суток при включенном освещении, среднее количество летальных случаев гораздо ниже ситуаций с отсутствием освещения и находится на уровне ДТП при естественных источниках света.
 
-\section{Модель}
+\section{Результаты модели и выводы}
 
 Для моделирования использовалась стандартная байесовская регрессия. Модель выглядит следующим образом:
 
@@ -325,7 +325,11 @@
 	\caption{Результаты модели}
 \end{table}
 
-Базовым годом был взят 2015-й. Базовый месяц --- январь. Базовый день недели --- понедельник. Коэффициенты при соответствующих факторных переменных следует интерпретировать относительно указанных базовых категорий. 
+Базовым годом был взят 2015-й. Базовый месяц --- январь. Базовый день недели --- понедельник. Коэффициенты при соответствующих факторных переменных следует интерпретировать относительно указанных базовых категорий.
+
+В таблице 1 показаны результаты оценок распределений неизвестных коэффициентов стандартной байесовской регрессии: медиана, HPD\footnote{High probability density} интервалы, а также некий аналог стандартному p-value --- probability of direction (PD). PD показывает с какой вероятностью оценка больше или меньше (в случае отрицательной медианы) нуля.
+
+Видим, что почти все коэффициенты с высокой вероятностью отличны от нуля, в частности и коэффициент при параметре температуры. Вывод, что с ростом температуры растет количество ДТП подтвердился.  
 
  
 
