Added final part

--- a/Paper/Course_work_Garmider.tex
+++ b/Paper/Course_work_Garmider.tex
@@ -329,7 +329,9 @@
 
 В таблице 1 показаны результаты оценок распределений неизвестных коэффициентов стандартной байесовской регрессии: медиана, HPD\footnote{High probability density} интервалы, а также некий аналог стандартному p-value --- probability of direction (PD). PD показывает с какой вероятностью оценка больше или меньше (в случае отрицательной медианы) нуля.
 
-Видим, что почти все коэффициенты с высокой вероятностью отличны от нуля, в частности и коэффициент при параметре температуры. Вывод, что с ростом температуры растет количество ДТП подтвердился.  
+Видим, что почти все коэффициенты с высокой вероятностью отличны от нуля, в частности и коэффициент при параметре температуры. Вывод, что с ростом температуры растет количество ДТП подтвердился. 
+
+Также наблюдается различия относительно 2015-го года, как и различия почти в каждом месяце относительно января. Количество ДТП в феврале с большой вероятностью не будет отличаться от количества ДТП в январе. Как и ожидалось, день недели имеет значение, в выходные дни действиетльно происходит меньше всего ДТП, однако как показывалось в части графического анализа, это далеко не значит, что данные дни самые безопасные.
 
  
 
